fixed indentation and listing

--- a/templates/terms_and_conditions.html
+++ b/templates/terms_and_conditions.html
@@ -1,45 +1,44 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="Paper-copy">
-      <p>NurseConnect is a National Department of Health (NDoH) initiative. It is the one stop shop where nurses can find information, ask for expert help, receive emotional support and have a line of direct communication with the National Department of Health. It utilises mobile software to give nurses in South Africa access to clinical, psychosocial and learning content. </p>
+  <p>NurseConnect is a National Department of Health (NDoH) initiative. It is the one stop shop where nurses can find information, ask for expert help, receive emotional support and have a line of direct communication with the National Department of Health. It utilises mobile software to give nurses in South Africa access to clinical, psychosocial and learning content. </p>
 
-      <p>NurseConnect sends messages over WhatsApp and SMS to help nurses with the important work they do. The NurseConnect mobisite, nurseconnect.org, offers a content repository that can be accessed by nurses at any time. There is also a NurseConnect Helpdesk. Nurses can reply to any NurseConnect message over WhatsApp or SMS with a question and a professional will reply. </p>
+  <p>NurseConnect sends messages over WhatsApp and SMS to help nurses with the important work they do. The NurseConnect mobisite, nurseconnect.org, offers a content repository that can be accessed by nurses at any time. There is also a NurseConnect Helpdesk. Nurses can reply to any NurseConnect message over WhatsApp or SMS with a question and a professional will reply. </p>
 
-      <h3>What is the Refer-a-Friend campaign?</h3>
+  <h3>What is the Refer-a-Friend campaign?</h3>
 
-      <p>The Refer-a-Friend campaign is a drive to recruit more nurses to sign up to NurseConnect.</p>
+  <p>The Refer-a-Friend campaign is a drive to recruit more nurses to sign up to NurseConnect.</p>
 
-      <p>It runs as follows: </p>
+  <p>It runs as follows: </p>
 
-      <p>There are two registration mechanisms:</p>
+  <p>There are two registration mechanisms:</p>
 
-      <p>a. As a nurse registered with NurseConnect, you can register another nurse via the USSD line (*135*550*5#). For every nurse you sign up, you will receive R10 worth of airtime as an incentive (‘the  airtime incentive”) loaded into your prepaid or top-up plan mobile device; alternatively</p>
+  <ol type="a">
+    <li>As a nurse registered with NurseConnect, you can register another nurse via the USSD line (*135*550*5#). For every nurse you sign up, you will receive R10 worth of airtime as an incentive (‘the  airtime incentive”) loaded into your prepaid or top-up plan mobile device; alternatively</li>
+    <li>As a nurse registered with NurseConnect, you can send a link to other nurses who have not yet registered with NurseConnect. Those nurses can access the link and register directly for NurseConnect. You will receive the airtime incentive loaded into your prepaid or top-up plan mobile device, for each and every nurse that you refer who signs up to NurseConnect up to the capped amount.</li>
+  </ol>
+  
+  <p>By agreeing to these Terms and Conditions, you agree to the following:</p>
 
-      <p>b. As a nurse registered with NurseConnect, you can send a link to other nurses who have not yet registered with NurseConnect. Those nurses can access the link and register directly for NurseConnect. You will receive the airtime incentive loaded into your prepaid or top-up plan mobile device, for each and every nurse that you refer who signs up to NurseConnect up to the capped amount.</p>
-
-      <p>By agreeing to these Terms and Conditions, you agree to the following:</p>
-
-      <h3>Terms &amp; Conditions </h3>
-      <ol>
-        <li>The Refer-a-Friend Campaign is carried out with the permission of the NurseConnect Partners. </li>
-        <li>You hereby confirm that you voluntarily agreed to register for NurseConnect and that you are voluntarily referring a friend to the Refer-a-Friend Campaign.</li>
-        <li>Data charges, required for any download and/or use of a reward/benefit, or any sms charges are never included. Any data or sms costs that you incur as a result of accessing registration link sent to you via sms or WhatsApp or forwarding the link to other registered nurses is for your account and cannot be recouped from NurseConnect or any NurseConnect partners.</li>
-        <li>You confirm, by accepting our offer to participate in the Refer-a-Friend Campaign that you will be directed to the registration link and you will only receive the airtime incentive upon confirmation that a nurse referred by you has been successfully registered with NurseConnect via the link. </li>
-        <li>The Refer-a-Nurse Campaign utilises the services of DT One, a leading global network for mobile top-up solutions and innovative mobile rewards, which ensures that the airtime incentive, can be received instantly and directly on your mobile phone provided that you have complied with the Terms and Conditions of the Campaign.</li>
-        <li>The Refer-a-Friend Campaign accepts no liability should we, or our service providers, be unable to recognise your network due to a technical fault or human error and should you not receive your airtime incentive within 24 hours of registering the nurse you are referring you are required to reply to any NurseConnect messages to contact the helpdesk and alert them if you have not received your airtime within 24 hours (outside of weekends and public holidays). </li>
-        <li>We do not accept responsibility for lost or delayed airtime incentives as a result of any network, computer or cell phone hardware or software failure of any kind.</li>
-        <li>The airtime incentive is only available to you if you are on a prepaid mobile phone or top-up plan type. All other contract phone packages are excluded. </li>
-        <li>Airtime is active as it is loaded directly to prepaid MSISDN until it is depleted. </li>
-        <li>The airtime incentive is not exchangeable for cash or for sale.</li>
-        <li>The Refer-a-Friend Campaign reserves the right to substitute any airtime incentive for an alternative reward of the same or similar value.</li>
-        <li>The Refer-a-Friend Campaign is in no way sponsored, endorsed or administered by, or associated with Telkom, MTN, Vodacom and Cell C and you acknowledge that you are providing information to the us and our agents only and not to telephone networks. </li>
-        <li>You have the right to opt out of receiving promotional material regarding the Refer-a-Friend Campaign by replying "STOP" to any of the messages regarding the Campaign. </li>
-        <li>Your contact details will remain confidential.</li>
-        <li>The Refer-a-Friend Campaign shall commence on _________ March 2019 and shall continue until the capped amount is reached.</li>
-        <li>The Refer-a-Friend Campaign may be terminated at any stage without notice to you regardless of whether the capped amount has been reached or not.</li>
-        <li>The Refer-a-Friend Campaign reserves the right to change the mechanics of the promotion at any time including the extension of the capped amount or the increase of the airtime incentive amount. </li>
-        <li>The current version of these Terms and Conditions governs the rights and obligations of each party every time you engage with the Refer-a-Friend Campaign. NurseConnect reserves the right to change, modify, add to or remove from portions or the whole of these Terms and Conditions from time to time.</li>
-      </ol>
-    </div>
+  <h3>Terms &amp; Conditions </h3>
+  <ol>
+    <li>The Refer-a-Friend Campaign is carried out with the permission of the NurseConnect Partners. </li>
+    <li>You hereby confirm that you voluntarily agreed to register for NurseConnect and that you are voluntarily referring a friend to the Refer-a-Friend Campaign.</li>
+    <li>Data charges, required for any download and/or use of a reward/benefit, or any sms charges are never included. Any data or sms costs that you incur as a result of accessing registration link sent to you via sms or WhatsApp or forwarding the link to other registered nurses is for your account and cannot be recouped from NurseConnect or any NurseConnect partners.</li>
+    <li>You confirm, by accepting our offer to participate in the Refer-a-Friend Campaign that you will be directed to the registration link and you will only receive the airtime incentive upon confirmation that a nurse referred by you has been successfully registered with NurseConnect via the link. </li>
+    <li>The Refer-a-Nurse Campaign utilises the services of DT One, a leading global network for mobile top-up solutions and innovative mobile rewards, which ensures that the airtime incentive, can be received instantly and directly on your mobile phone provided that you have complied with the Terms and Conditions of the Campaign.</li>
+    <li>The Refer-a-Friend Campaign accepts no liability should we, or our service providers, be unable to recognise your network due to a technical fault or human error and should you not receive your airtime incentive within 24 hours of registering the nurse you are referring you are required to reply to any NurseConnect messages to contact the helpdesk and alert them if you have not received your airtime within 24 hours (outside of weekends and public holidays). </li>
+    <li>We do not accept responsibility for lost or delayed airtime incentives as a result of any network, computer or cell phone hardware or software failure of any kind.</li>
+    <li>The airtime incentive is only available to you if you are on a prepaid mobile phone or top-up plan type. All other contract phone packages are excluded. </li>
+    <li>Airtime is active as it is loaded directly to prepaid MSISDN until it is depleted. </li>
+    <li>The airtime incentive is not exchangeable for cash or for sale.</li>
+    <li>The Refer-a-Friend Campaign reserves the right to substitute any airtime incentive for an alternative reward of the same or similar value.</li>
+    <li>The Refer-a-Friend Campaign is in no way sponsored, endorsed or administered by, or associated with Telkom, MTN, Vodacom and Cell C and you acknowledge that you are providing information to the us and our agents only and not to telephone networks. </li>
+    <li>You have the right to opt out of receiving promotional material regarding the Refer-a-Friend Campaign by replying "STOP" to any of the messages regarding the Campaign. </li>
+    <li>Your contact details will remain confidential.</li>
+    <li>The Refer-a-Friend Campaign shall commence on _________ March 2019 and shall continue until the capped amount is reached.</li>
+    <li>The Refer-a-Friend Campaign may be terminated at any stage without notice to you regardless of whether the capped amount has been reached or not.</li>
+    <li>The Refer-a-Friend Campaign reserves the right to change the mechanics of the promotion at any time including the extension of the capped amount or the increase of the airtime incentive amount. </li>
+    <li>The current version of these Terms and Conditions governs the rights and obligations of each party every time you engage with the Refer-a-Friend Campaign. NurseConnect reserves the right to change, modify, add to or remove from portions or the whole of these Terms and Conditions from time to time.</li>
+  </ol>}
 {% endblock content %}
