--- a/registrations/templates/registrations/registration_details.html
+++ b/registrations/templates/registrations/registration_details.html
@@ -16,21 +16,22 @@ Sign up to NurseConnect!
 
     {% for field in form %}
       <fieldset>
-        {% ifequal field.name 'terms_and_conditions' %}
-          <label for="id_{{ field.name }}"> {{ field }} I agree to the
-          <a href="terms_and_conditions">Terms & Conditions</a>
-          </label>
-          {% if field.errors %}
-            {{ field.errors }}
-          {% endif %}
-        {% else %}
+      {% ifequal field.name 'terms_and_conditions' %}
+        <label for="id_{{ field.name }}"> Please read the
+          <a href="terms_and_conditions">Terms & Conditions.</a> Do you agree to them?
+        </label>
+        {{ field }}
+        {% if field.errors %}
+          {{ field.errors }}
+        {% endif %}
+      {% else %}
         <label for="id_{{ field.name }}"> {{ field.label }}</label>
         {{ field }}
         {% if field.errors %}
           {{ field.errors }}
         {% endif %}
-       {% endifequal %}
-    </fieldset>
+      {% endifequal %}
+      </fieldset>
     {% endfor %}
 
     <input type="submit" value="Done">
