--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,13 @@
                 </a>
             </div>
         </header>
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
         <section action class="Splash">
             {% block content %}{% endblock content %}
         </section>
