Correct html break tag

--- a/registrations/templates/registrations/confirm_optin.html
+++ b/registrations/templates/registrations/confirm_optin.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p> This number previously opted out of NurseConnect messages.</br>
+<p> This number previously opted out of NurseConnect messages.<br />
     Are you sure you want to sign up again? A number that previously opted out cannot get R10 airtime. </p>
 <form method="post">
     {% csrf_token %}
