Add Done button when a user rejects to optin

--- a/registrations/templates/registrations/reject_optin.html
+++ b/registrations/templates/registrations/reject_optin.html
@@ -2,4 +2,7 @@
 
 {% block content %}
 <p class="errorlist"> We're sorry to see you go. Visit this link again if you want to sign up to NurseConnect. </p>
+<form method="get" action="/">
+    <input type="submit" value="Done">
+</form>
 {% endblock %}
