Show clinic code error if "No" is selected on clinic confirmation

--- a/registrations/templates/registrations/registration_details.html
+++ b/registrations/templates/registrations/registration_details.html
@@ -20,6 +20,11 @@ Sign up to NurseConnect!
         {% if field.errors %}
           {{ field.errors }}
         {% endif %}
+        {% if field.name == "clinic_code" and clinic_code_error %}
+          <ul class="errorlist">
+            <li>{{ clinic_code_error }}</li>
+          </ul>
+        {% endif %}
     {% endfor %}
 
     <input type="submit" value="Done">
