Copy updates to terms and conditions page

--- a/templates/terms_and_conditions.html
+++ b/templates/terms_and_conditions.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
+  <h1>Terms & Conditions</h1>
+
   <p>NurseConnect is a National Department of Health (NDoH) initiative. It is the one stop shop where nurses can find information, ask for expert help, receive emotional support and have a line of direct communication with the National Department of Health. It utilises mobile software to give nurses in South Africa access to clinical, psychosocial and learning content. </p>
 
   <p>NurseConnect sends messages over WhatsApp and SMS to help nurses with the important work they do. The NurseConnect mobisite, nurseconnect.org, offers a content repository that can be accessed by nurses at any time. There is also a NurseConnect Helpdesk. Nurses can reply to any NurseConnect message over WhatsApp or SMS with a question and a professional will reply. </p>
 
   <h3>What is the Refer-a-Friend campaign?</h3>
 
-  <p>The Refer-a-Friend campaign is a drive to recruit more nurses to sign up to NurseConnect.</p>
+  <p>The Refer-a-Friend campaign is a drive to recruit more nurses to sign up to NurseConnect. Only nurses and midwives working in maternal and child health can participate in this campaign.</p>
 
   <p>It runs as follows: </p>
 
