Copy update on registration details view

--- a/registrations/templates/registrations/registration_details.html
+++ b/registrations/templates/registrations/registration_details.html
@@ -9,7 +9,8 @@ Sign up to NurseConnect!
     maternal and child health.
 </p>
 <p>
-    You can get a R10 airtime voucher for every coworker you sign up.
+    If you're a NurseConnect subscriber, you can get a R10 airtime reward for every
+    co-worker you sign up.
 </p>
 <form method="post">
     {% csrf_token %}
