Add start date to terms (thanks @KaitCrawford)

--- a/templates/terms_and_conditions.html
+++ b/templates/terms_and_conditions.html
@@ -39,7 +39,7 @@
     <li>The Refer-a-Friend Campaign is in no way sponsored, endorsed or administered by, or associated with Telkom, MTN, Vodacom and Cell C and you acknowledge that you are providing information to the us and our agents only and not to telephone networks. </li>
     <li>You have the right to opt out of receiving promotional material regarding the Refer-a-Friend Campaign by replying "STOP" to any of the messages regarding the Campaign. </li>
     <li>Your contact details will remain confidential.</li>
-    <li>The Refer-a-Friend Campaign shall commence on _________ March 2019 and shall continue until the capped amount is reached.</li>
+    <li>The Refer-a-Friend Campaign shall commence on 24 March 2019 and shall continue until the capped amount is reached.</li>
     <li>The Refer-a-Friend Campaign may be terminated at any stage without notice to you regardless of whether the capped amount has been reached or not.</li>
     <li>The Refer-a-Friend Campaign reserves the right to change the mechanics of the promotion at any time including the extension of the capped amount or the increase of the airtime incentive amount. </li>
     <li>The current version of these Terms and Conditions governs the rights and obligations of each party every time you engage with the Refer-a-Friend Campaign. NurseConnect reserves the right to change, modify, add to or remove from portions or the whole of these Terms and Conditions from time to time.</li>
