Add airtime limits to terms and conditions

--- a/templates/terms_and_conditions.html
+++ b/templates/terms_and_conditions.html
@@ -19,6 +19,7 @@
   <ol type="a">
     <li>As a nurse registered with NurseConnect, you can register another nurse via the USSD line (*135*550*5#). For every nurse you sign up, you will receive R10 worth of airtime as an incentive (‘the  airtime incentive”) loaded into your prepaid or top-up plan mobile device; alternatively</li>
     <li>As a nurse registered with NurseConnect, you can send a link to other nurses who have not yet registered with NurseConnect. Those nurses can access the link and register directly for NurseConnect. You will receive the airtime incentive loaded into your prepaid or top-up plan mobile device, for each and every nurse that you refer who signs up to NurseConnect up to the capped amount.</li>
+    <li>Should it be determined by the Nurseconnect Partners that you are registering third parties who are not registered nurses for the purposes of fraudulently obtaining the airtime incentive, we reserve the right to temporarily suspend you and any of your referrals/registrations from NurseConnect.</li>
   </ol>
   
   <p>By agreeing to these Terms and Conditions, you agree to the following:</p>
@@ -42,6 +43,7 @@
     <li>The Refer-a-Friend Campaign shall commence on 24 March 2019 and shall continue until the capped amount is reached.</li>
     <li>The Refer-a-Friend Campaign may be terminated at any stage without notice to you regardless of whether the capped amount has been reached or not.</li>
     <li>The Refer-a-Friend Campaign reserves the right to change the mechanics of the promotion at any time including the extension of the capped amount or the increase of the airtime incentive amount. </li>
+    <li>You may not make more than 6 referrals or registrations per hour and you may not make a total of more than 20 referrals or registrations per month. You further confirm that you understand and will abide by the provisions of paragraph c. above.</li>
     <li>The current version of these Terms and Conditions governs the rights and obligations of each party every time you engage with the Refer-a-Friend Campaign. NurseConnect reserves the right to change, modify, add to or remove from portions or the whole of these Terms and Conditions from time to time.</li>
   </ol>
   <a href="{% url "registrations:registration-details" %}">Back to registration</a>
