Update terms and conditions (thanks @OMosimege)

--- a/templates/terms_and_conditions.html
+++ b/templates/terms_and_conditions.html
@@ -20,6 +20,7 @@
     <li>As a nurse registered with NurseConnect, you can register another nurse via the USSD line (*135*550*5#). For every nurse you sign up, you will receive R10 worth of airtime as an incentive (‘the  airtime incentive”) loaded into your prepaid or top-up plan mobile device; alternatively</li>
     <li>As a nurse registered with NurseConnect, you can send a link to other nurses who have not yet registered with NurseConnect. Those nurses can access the link and register directly for NurseConnect. You will receive the airtime incentive loaded into your prepaid or top-up plan mobile device, for each and every nurse that you refer who signs up to NurseConnect up to the capped amount.</li>
     <li>Should it be determined by the Nurseconnect Partners that you are registering third parties who are not registered nurses for the purposes of fraudulently obtaining the airtime incentive, we reserve the right to temporarily suspend you and any of your referrals/registrations from NurseConnect.</li>
+    <li>Should it be determined by the Nurseconnect Partners that a facility code/s are being used for the purposes of fraudulently obtaining the airtime incentives, we reserve the right to temporarily suspend the facility code/s from being used to sign up to NurseConnect.</li>
   </ol>
   
   <p>By agreeing to these Terms and Conditions, you agree to the following:</p>
