--- a/registrations/templates/registrations/success.html
+++ b/registrations/templates/registrations/success.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <p> Thank you! You will get NurseConnect messages on {{ channel }}.</p>
-<p> Send this link to a friend. If they sign up you will get R10 airtime!</p>
+<p> Send this link to a friend that wants to sign up.</p>
 
 <input id="referral" type="text" readonly onclick="this.select()" value={{ referral_link }}>
 <button id="copy_button">Copy link</button>
