changed complete registration screen copy

--- a/registrations/templates/registrations/success.html
+++ b/registrations/templates/registrations/success.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p> Thank you! You will get NurseConnect messages on {{ channel }}.</p>
+<p> Thank you for signing up! NurseConnect will send you clinical information and tips about working in maternal and child health.</p>
 <p> Send this link to a friend that wants to sign up.</p>
 
 <input id="referral" type="text" readonly onclick="this.select()" value={{ referral_link }}>
